--- a/style/style.css
+++ b/style/style.css
@@ -26,7 +26,7 @@ img{
 }
 
 h1{
-    font-size: 60px;
+    font-size: 80px;
     margin-top: -80px;
     color: #fff;
     text-shadow: -1px -1px 17px #aF00aF,  
@@ -60,6 +60,7 @@ button{
     align-items: center;
     justify-content: center;
     gap: 50px;
+    margin-top: -30px;
 }
 
 .coracao{
